fixed hard coded file path

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,6 @@
 [Settings]
 width = 800
 height = 700
-last_folder = C:/Users/ccc80/Desktop/codebasegemini
+last_folder = 
 ignore_list = .log, .tmp, venv
 theme = dark
-
