--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [Settings]
 width = 800
 height = 700
-last_folder = 
-ignore_list = .log, .tmp, venv
+last_folder = C:/Users/ccc80/Desktop/MyAIStudioScript
+ignore_list = .git, dist, node_modules
 theme = dark
+
