tweaked for .exe

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 width = 800
 height = 700
 last_folder = C:/Users/ccc80/Desktop/MyAIStudioScript
-ignore_list = .git, dist, node_modules
+ignore_list = 
 theme = dark
 
