--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 width = 800
-height = 700
-last_folder = C:/Users/ccc80/Desktop/CodebaseToText
-ignore_list = 
+height = 701
+last_folder = C:/Users/ccc80/Desktop/MyAIStudioScript
+ignore_list = dist, node_modules
 theme = dark
 
