--- a/config.ini
+++ b/config.ini
@@ -4,4 +4,19 @@ height = 701
 last_folder = C:/Users/ccc80/Desktop/MyAIStudioScript
 ignore_list = dist, node_modules
 theme = dark
+max_file_size = 10
+auto_save = True
+verbose = False
+window_x = 100
+window_y = 100
+max_recent_folders = 5
+enable_animations = True
+enable_tooltips = True
+
+[Advanced]
+scan_timeout = 300
+max_threads = 4
+chunk_size = 50000
+enable_caching = True
+cache_size = 100
 
