--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 width = 800
 height = 701
 last_folder = C:/Users/ccc80/Desktop/MyAIStudioScript
-ignore_list = dist, node_modules
+ignore_list = dist,node_modules
 theme = dark
 max_file_size = 10
 auto_save = True
-verbose = False
+verbose = True
 window_x = 100
 window_y = 100
 max_recent_folders = 5
