added src folder

--- a/config.ini
+++ b/config.ini
@@ -2,21 +2,7 @@
 width = 800
 height = 701
 last_folder = C:/Users/ccc80/AIstudioProxyAPI
-ignore_list = dist,node_modules
-	.git
-	__pycache__
-	build
-	dist
-	auth_profiles
-	certs
-	docker
-	poetry.lock
-	gui_launcher.py
-	webui.css
-	webui.js
-	logs/app.log
-	logs/launch_app.log
-	errors_py
+ignore_list = dist,node_modules,.git,__pycache__,build,dist,auth_profiles,certs,docker,poetry.lock,gui_launcher.py,webui.css,webui.js,logs/app.log,logs/launch_app.log,errors_py
 theme = dark
 max_file_size = 10
 auto_save = True
